--- a/index.html
+++ b/index.html
@@ -507,6 +507,6 @@ html{
 
 </body>
 <script>
-	console.log("hi ra jaffas what are you doing");
+	alert("hi,welcome to my portfolio");
 </script>
 </html>
