--- a/index.html
+++ b/index.html
@@ -377,6 +377,22 @@ html{
 	.hamburger input:checked~.list{
 		display:block;
 	}
+	.python-logo img{
+		width: 60px;
+		height: 60px;
+    }
+	.html-logo img{
+		width: 50px;
+		height: 50px;
+	}
+	.css-logo img{
+		width: 50px;
+		height: 50px;
+	}
+	.js-logo img{
+		width: 50px;
+		height: 50px;
+	}
 }
 </style>
 </head>
@@ -507,6 +523,6 @@ html{
 
 </body>
 <script>
-	alert("hi,welcome to my portfolio");
+	alert(" hi , welcome to my portfolio 😍😍 ");
 </script>
 </html>
