--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ html{
 /*_______Experience_ends_____*/
 /*_______________________________________________________________________responsive_______________________________________________________________________*/
 
-@media (min-width:768px){
+@media (max-width:768px){
 	.nav-bar{
 	border:1px solid black;
 	border-radius:20px;
