--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ html{
 /*_______Experience_ends_____*/
 /*_______________________________________________________________________responsive_______________________________________________________________________*/
 
-@media (max-width:768px){
+@media (min-width:768px){
 	.nav-bar{
 	border:1px solid black;
 	border-radius:20px;
@@ -352,7 +352,7 @@ html{
 	position:fixed;
 	top:3px;
 	background-color:rgba(255 255 255/80%);
-	width:347px;
+	width:768px;
 	z-index:1;
 	left:5px;
 	backdrop-filter:blur(50px);
