--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ html{
 .intro{
 	background-color:#ecf0f3;
 	width:90%;
-	height:550px;
+	height:100vh;
 	position:relative;
 	top:50px;
 	left:5%;	
