--- a/index.html
+++ b/index.html
@@ -136,10 +136,14 @@
 		
 	</div>
 	<div class="portfolio" id="aboutme">
-		aboutme
+		<div class="container">
+		</div>
 	</div>
-	<div class="portfolio" id="contact">
-		contact form
-	</div>
+	<div class="contact" id="contact">
+		<div class="container">
+			<div class="box">
+
+			</div>
+		</div>
 </body>
 </html>
