--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Hareeswar | portfolio</title>
 </head>
 <body class="body-laptop">
@@ -29,7 +29,7 @@
 			</div>
 		</div>
 		<div class="intro-right">
-			<div class="3d-model" style="overflow:hidden;">
+			<div class="3d-model">
 				<iframe id="landing-model" title="A 3D model of a robot"  width="100%" height="550px" src="https://sketchfab.com/models/99bfe75ebd734fa3832a63e02e2cacf7/embed?annotations_visible=0&amp;autospin=-0.1&amp;autostart=1&amp;camera=0&amp;double_click=0&amp;internal=1&amp;max_texture_size=1024&amp;orbit_constraint_pan=1&amp;orbit_constraint_zoom_in=40&amp;orbit_constraint_zoom_out=60&amp;preload=1&amp;scrollwheel=0&amp;sound_enable=1&amp;transparent=1&amp;ui_animations=0&amp;ui_annotations=1&amp;ui_ar=0&amp;ui_ar_help=1&amp;ui_color=green&amp;ui_fadeout=0&amp;ui_fullscreen=0&amp;ui_help=0&amp;ui_infos=0&amp;ui_inspector=0&amp;ui_settings=0&amp;ui_stop=0&amp;ui_theatre=0&amp;ui_theme=dark&amp;ui_vr=0&amp;ui_watermark=0" frameborder="0" ></iframe>
 			</div>
 		</div>
@@ -131,7 +131,6 @@
 			</div>
 		</div>
 	</div>
-
 	<div class="portfolio" id="portfolio">
 		
 	</div>
@@ -141,9 +140,25 @@
 	</div>
 	<div class="contact" id="contact">
 		<div class="container">
+			<div class="left-contact">
+				
+			</div>
 			<div class="box">
-
+				<form class="form-container">
+					<h2>Contact Me</h2>
+					<div>
+						<input type="text" placeholder=" Your Name">
+						<input type="email" placeholder=" Your Email">
+						<textarea cols="47" rows="10" placeholder=" Your Message"></textarea>
+						<button>Send Message <i class="fa fa-paper-plane"></i></button>
+					</div>
+				</form>
 			</div>
 		</div>
+	</div>
 </body>
+<footer style="position:relative; top:70px; background-color: purple; height:100px; COLOR: #fff;">
+	<a href="#" style="text-decoration: none; color:purple; text-shadow: 2px 2px 5px black;"><i class="fa fa-arrow-up" style="float:right; border-radius:50%; background-color: white;  width:50px; height:50px; font-size: 50px; border: 2px solid black; box-shadow: 2px 2px 5px black;"></i></a>
+	<p>hareeswar 2024 &copy all copyrights are reserved </p>
+</footer>
 </html>
